2006-06-09 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.fig:
	- Added a button to let user clear the stack created using 'plot freq domain results for this box in the stack' button.
	* lt_analysis_gui.m:
	- Coding associated with 'clear stack' button
	- Fixed a bug in stacking the frequency domain results as the user drags box, now actually works.
	- Also plots a time-domain trace color coded to indicate position of each element of stack

2006-06-08 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.fig:
	- Added a button that allows user to compare frequency domain plots for different parts of the same file. Not tested.
	- Added a checkbox that allows user to specify if the statistics of the data within box is to be recomputed
	- Deleted 'Do Nothing' radio box.
	* lt_analysis_gui.fig: 
	- Coding necessary to facilitate the above mentioned changes.
	- Now spectrogram is plotted as a surface (instead of colormap) and in log scale.
	- Commented out overlaying of position data on spectrogram, doesn't go well with surface.
	- Added a routine that computes and plots energy vs time. This may just be temporary.
	
	

2006-06-06 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: Now uses 'bone' colormap instead of 'gray' for spectrogram.
	* lt_analysis_gui.fig: minor cosmetic changes.

2006-06-06 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: 
	- Now when told to do so, drift is subtracted out before frequency domain analysis is performed
	- Now the spectrogram plot displays the dimension used, i.e. R/X/Y/Z
	- Now magnet log (channel 8) is overlayed on the spectrogram
	- Fixed a bug in overlaymags method that caused the magnet trace display to show up outside the axis limits

2006-06-04 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.fig, lt_analysis_gui.m: 
	- Added one more experiment type in the list, allows to load bead position and position error.
	- Fixed a bug in annotating figure for position error signal.